# pgc

./: .gitignore  .gitmodules  README.md
scripts/: 01_prep_dataset.ipynb  02_run_test.ipynb  03_parse_results.ipynb  04_calc_metrics.ipynb  05_plot.ipynb  10_prep_dataset.ipynb  20_run_test.ipynb  30_parse_results.ipynb  31_parse_dump.ipynb  40_calc_metrics.ipynb  50_plot.ipynb  parse_and_plot_res.py
source/custom/: CMakeLists.txt
source/custom/01_ring/: CMakeLists.txt  COMPATIBILITY_ANALYSIS.md
source/custom/01_ring/source/: geometry_predictive_encoder.cpp  ply.cpp
source/custom/02_xyz/: CMakeLists.txt  analysis_cartesian_angular_mode.md
source/custom/02_xyz/source/: geometry_predictive_encoder.cpp  ply.cpp
source/custom/03_group8/: CMakeLists.txt
source/custom/03_group8/source/: geometry_predictive_encoder.cpp
source/custom/golden_ref/: CMakeLists.txt
source/custom/golden_ref/source/: encoder.cpp  geometry_predictive_encoder.cpp
source/custom/v1/: CMakeLists.txt
source/custom/v1/source/: geometry_predictive_encoder.cpp
source/custom/v2/: CMakeLists.txt
source/custom/v2/source/: geometry_predictive_encoder.cpp
source/custom/v3/: CMakeLists.txt
source/custom/v3/source/: geometry_predictive_encoder.cpp
source/hls/: Makefile  binarizer.h  delta.h  pgc_dut.h  sc_main.cc  sim  tb.h  top.h
source/mvp/: arith_encoder.cc  arith_encoder.h  binarizer.cc  binarizer.h  chunk_mux.cc  chunk_mux.h  context_modeler.cc  context_modeler.h  delta.cc  delta.h  improvements.md  main.cc  run_tests.py  sim  specification.md  tb.cc  tb.h  top.h
source/tlm/: delta.cc  main.cc  sim  tb.cc  tb.h  top.h
